3B - update buyer/seller return

--- a/3B-NEW/buyer-order-return-info-evidence.html
+++ b/3B-NEW/buyer-order-return-info-evidence.html
@@ -181,11 +181,15 @@
 					<h3 class="title">Shipping Info</h3>
 					<div class="row">
 						<div class="col-md-6">
-							<div class="track"><img src="assets/images/img2.jpg"> Viettel Post</div>
+							<div class="track"><input type="text" class="form-control" placeholder="Viettel Post" disabled="disabled"> </div>
 						</div>
 						<div class="col-md-6">
-							<div class="total"><b>Required code:</b> #190013123MIGK50</div>
-							<div class="total"><b>Request time:</b> 20-09-2019  16:00</div>
+							<div class="total"><b>Required Number:</b> #190013123MIGK50</div>
+							<div class="total">
+								<label class="pull-left pad6 margin-r-5">Mã Vận đơn:</label>
+								<div class="pull-left"><input type="text" class="form-control" placeholder="ABCXYZ12" disabled="disabled"></div>
+								<div class="clearfix"></div>
+							</div>
 						</div>
 					</div>					
 				</div>
