--- a/3B-NEW/buyer-order-return-info.html
+++ b/3B-NEW/buyer-order-return-info.html
@@ -186,10 +186,18 @@
 					</div>
 				</div>
 
-				<div class="order-block-item margin-b">
+				<div class="order-block-item addr margin-b">
+					<h3 class="title">Return to Address</h3>
 					<div class="ship-addr">
-						<h4>Kết quả xét duyệt của 3B</h4>
-						<p>Có <span class="text-red"><b>2/3</b></span> sản phẩm yêu cầu trả hàng được chấp nhận, vui lòng xem danh sách sản phẩm được chấp nhận trả hàng bên dưới</p>
+						<p class="text-red">You can contact with seller to confirm return address again.</p>
+
+						<h4>Huong Phu Thi</h4>
+						<div class="address-body">
+							<ul>
+								<li><img class="icons-svg" src="assets/images/svg/phone.svg"> +84 090 123 456</li>
+								<li><img class="icons-svg" src="assets/images/svg/place.svg"> Số 1, tên đường, phố, quận...</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 
@@ -272,19 +280,6 @@
 						<!-- /END SHOP ITEM -->
 					</div>
 					<!-- /END CART LIST -->
-				</div>
-
-				<div class="order-block-item addr margin-b">
-					<h3 class="title">Shipping Address</h3>
-					<div class="ship-addr">
-						<h4>Huong Phu Thi <a href="#" class="pull-right"><img src="assets/images/svg/copy-2.svg"></a></h4>
-						<div class="address-body">
-							<ul>
-								<li><img class="icons-svg" src="assets/images/svg/phone.svg"> +84 090 123 456</li>
-								<li><img class="icons-svg" src="assets/images/svg/place.svg"> Số 1, tên đường, phố, quận...</li>
-							</ul>
-						</div>
-					</div>
 				</div>
 
 				<div class="order-block-item addr margin-b">
