--- a/3B-NEW/seller-order-return-info-evidence.html
+++ b/3B-NEW/seller-order-return-info-evidence.html
@@ -259,8 +259,8 @@
 							<div class="track"><img src="assets/images/img2.jpg"> Viettel Post</div>
 						</div>
 						<div class="col-md-6">
-							<div class="total"><b>Required code:</b> #190013123MIGK50</div>
-							<div class="total"><b>Request time:</b> 20-09-2019  16:00</div>
+							<div class="total"><b>Required Number:</b> #190013123MIGK50</div>
+							<div class="total"><b>Mã vận đơn:</b> ABCXYZ12</div>
 						</div>
 					</div>					
 				</div>
@@ -283,9 +283,6 @@
 									<button class="btn btn-app"><i class="fa fa-plus"></i></button>
 								</li>
 							</ul>
-							<div class="form-group">
-								<textarea class="form-control" rows="3" placeholder="Ghi chú"></textarea>
-							</div>
 						</div>
 						<div class="clearfix"></div>
 					</div>
