3B - add Admin Manage Banking

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -202,7 +202,6 @@
 					<ul>
 						<li><a href="buyer-voucher.html">Buyer Voucher</a></li>
 						<li><a href="buyer-voucher-empty.html">Buyer Voucher Empty</a></li>
-						<li><a href="buyer-voucher-empty.html">Buyer Voucher Empty</a></li>
 						<li><a href="buyer-donmua.html">Buyer Order</a></li>
 						<li><a href="buyer-rating.html">Buyer Rating Form</a></li>
 					</ul>
@@ -282,6 +281,7 @@
 					<li><a href="admin-reject-order.html">Admin Reject Order</a></li>
 					<li><a href="admin-return-reason.html">Admin Return Reason</a></li>
 					<li><a href="admin-return.html">Admin Return</a></li>
+					<li><a href="admin-banking.html">Admin Manage Banking</a></li>
 				</ul>
 			</div>
 			<div class="col-md-6">
