3B - Phase 5 - add Buyer 3B Coin

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -292,13 +292,28 @@
 				</ul>
 			</div>
 		</div>
+
+		<hr style="border:2px solid #aaa">
+
+		<div id="pharse5" class="row">
+			<div class="col-md-6">
+				<div class="admin">
+					<h5>BUYER</h5>
+					<ul>
+						<li><a href="buyer-3b-coin.html">Buyer 3B Coin</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
+
 	<!-- /END WRAPPER -->
 	<ul style="position:fixed;right:20px;top:50%;font-size:24px;">
 		<li><a href="#pharse1">Pharse 1</a></li>
 		<li><a href="#pharse2">Pharse 2</a></li>
 		<li><a href="#pharse3">Pharse 3</a></li>
 		<li><a href="#pharse4">Pharse 4</a></li>
+		<li><a href="#pharse5">Pharse 5</a></li>
 	</ul>
 
 </body>
