3B - phase 4 - update text seller/buyer return infomation

--- a/3B-NEW/seller-order-return-info.html
+++ b/3B-NEW/seller-order-return-info.html
@@ -340,7 +340,7 @@
 								<div class="row">
 									<div class="col-md-6">
 										<div class="item">
-											<b>Required code:</b> #190013123MIGK50 
+											<b>Request number:</b> #190013123MIGK50 
 											<a href="#" class="pull-right"><img src="assets/images/svg/copy-2.svg"></a>
 											<div class="clearfix"></div>
 										</div>
