--- a/3B-NEW/buyer-voucher.html
+++ b/3B-NEW/buyer-voucher.html
@@ -186,104 +186,60 @@
 						</div>
 
 						<div class="box-body buyer-profile">
-							<div class="nav-tabs-custom">
-								<ul class="nav nav-tabs">
-									<li class="active">
-										<a href="#tab_1" data-toggle="tab">Store</a>
-									</li>
-									<li>
-										<a href="#tab_2" data-toggle="tab">3B</a>
-									</li>
-								</ul>
-								<div class="tab-content">
-									<!-- BEGIN LIST BUYER VOUCHER -->
-									<div class="tab-pane active" id="tab_1">
-										<div class="row">
-											<div class="col-md-6">
-												<div class="buyer-voucher-block">
-													<div class="info pull-left">
-														<h3>30%</h3>
-														<h4>Get 30% off your purchase using this my alot exclusive.</h4>
-														<p>05/09/2019 - 07/09/2019</p>
-													</div>
-													<div class="get-voucher pull-right">
-														<a href="#">Get<br>Voucher</a>
-													</div>
-													<div class="clearfix"></div>
-												</div>
-											</div>
-											<div class="col-md-6">
-												<div class="buyer-voucher-block">
-													<div class="info pull-left">
-														<h3>30%</h3>
-														<h4>Get 30% off your purchase using this my alot exclusive.</h4>
-														<p>05/09/2019 - 07/09/2019</p>
-													</div>
-													<div class="get-voucher pull-right">
-														<a href="#">Get<br>Voucher</a>
-													</div>
-													<div class="clearfix"></div>
-												</div>
-											</div>
-											<div class="clearfix"></div>
-											<div class="col-md-6">
-												<div class="buyer-voucher-block">
-													<div class="info pull-left">
-														<h3>30%</h3>
-														<h4>Get 30% off your purchase using this my alot exclusive.</h4>
-														<p>05/09/2019 - 07/09/2019</p>
-													</div>
-													<div class="get-voucher pull-right">
-														<a href="#">Get<br>Voucher</a>
-													</div>
-													<div class="clearfix"></div>
-												</div>
-											</div>
-											<div class="col-md-6">
-												<div class="buyer-voucher-block">
-													<div class="info pull-left">
-														<h3>30%</h3>
-														<h4>Get 30% off your purchase using this my alot exclusive.</h4>
-														<p>05/09/2019 - 07/09/2019</p>
-													</div>
-													<div class="get-voucher pull-right">
-														<a href="#">Get<br>Voucher</a>
-													</div>
-													<div class="clearfix"></div>
-												</div>
-											</div>
-											<div class="clearfix"></div>
-											<div class="col-md-6">
-												<div class="buyer-voucher-block">
-													<div class="info pull-left">
-														<h3>30%</h3>
-														<h4>Get 30% off your purchase using this my alot exclusive.</h4>
-														<p>05/09/2019 - 07/09/2019</p>
-													</div>
-													<div class="get-voucher pull-right">
-														<a href="#">Get<br>Voucher</a>
-													</div>
-													<div class="clearfix"></div>
-												</div>
-											</div>
-											<div class="col-md-6">
-												<div class="buyer-voucher-block">
-													<div class="info pull-left">
-														<h3>30%</h3>
-														<h4>Get 30% off your purchase using this my alot exclusive.</h4>
-														<p>05/09/2019 - 07/09/2019</p>
-													</div>
-													<div class="get-voucher pull-right">
-														<a href="#">Get<br>Voucher</a>
-													</div>
-													<div class="clearfix"></div>
-												</div>
-											</div>
-											<div class="clearfix"></div>
+							<div class="row">
+								<div class="col-md-3">
+									<div class="buyer-voucher">
+										<div class="info">
+											<h3 class="text-red">Free shipping</h3>
+											<span>Get 30% off your purchase using this my alot exclusive.</span>
+											<span class="date">05/09/2019 - 07/09/2019</span>
 										</div>
 									</div>
-									<!-- /END LIST BUYER VOUCHER -->
-									<div class="tab-pane" id="tab_2">
+								</div>
+								<div class="col-md-3">
+									<div class="buyer-voucher">
+										<div class="info">
+											<h3 class="text-red">Free shipping</h3>
+											<span>Get 30% off your purchase using this my alot exclusive.</span>
+											<span class="date">05/09/2019 - 07/09/2019</span>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="buyer-voucher">
+										<div class="info">
+											<h3 class="text-red">-50,000đ</h3>
+											<span>Đơn tối thiểu 300,000đ. Giảm tối đa 50,000 vnđ</span>
+											<span><b>Thanh toán:</b> bằng thẻ Airpay, Zalopay</span>
+											<span class="date">05/09/2019 - 07/09/2019</span>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="buyer-voucher">
+										<div class="info">
+											<h3 class="text-red">Free shipping</h3>
+											<span>Get 30% off your purchase using this my alot exclusive.</span>
+											<span class="date">05/09/2019 - 07/09/2019</span>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="buyer-voucher">
+										<div class="info">
+											<h3 class="text-red">Free shipping</h3>
+											<span>Get 30% off your purchase using this my alot exclusive.</span>
+											<span class="date">05/09/2019 - 07/09/2019</span>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-3">
+									<div class="buyer-voucher">
+										<div class="info">
+											<h3 class="text-red">Free shipping</h3>
+											<span>Get 30% off your purchase using this my alot exclusive.</span>
+											<span class="date">05/09/2019 - 07/09/2019</span>
+										</div>
 									</div>
 								</div>
 							</div>
