3B - phase 5 - add Seller Banking Account

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -301,6 +301,15 @@
 					<h5>BUYER</h5>
 					<ul>
 						<li><a href="buyer-3b-coin.html">Buyer 3B Coin</a></li>
+						<li><a href="buyer-voucher.html">Buyer Voucher</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="admin">
+					<h5>SELLER</h5>
+					<ul>
+						<li><a href="seller-banking-account.html">Seller Banking Account</a></li>
 					</ul>
 				</div>
 			</div>
