3B - phase 5 - update style buyer voucher

--- a/3B-NEW/buyer-voucher.html
+++ b/3B-NEW/buyer-voucher.html
@@ -206,9 +206,9 @@
 									</div>
 								</div>
 								<div class="col-md-3">
-									<div class="buyer-voucher">
+									<div class="buyer-voucher normal">
 										<div class="info">
-											<h3 class="text-red">-50,000đ</h3>
+											<h3 class="text-normal">-50,000đ</h3>
 											<span>Đơn tối thiểu 300,000đ. Giảm tối đa 50,000 vnđ</span>
 											<span><b>Thanh toán:</b> bằng thẻ Airpay, Zalopay</span>
 											<span class="date">05/09/2019 - 07/09/2019</span>
