3B - phase 5 - add wallet3b - transaction-history - transaction-withdraw-detail

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -313,6 +313,16 @@
 					</ul>
 				</div>
 			</div>
+			<div class="col-md-6">
+				<div class="admin">
+					<h5>WALLET 3B</h5>
+					<ul>
+						<li><a href="seller-wallet3b.html">Wallet 3B</a></li>
+						<li><a href="seller-wallet3b-transaction-history.html">Seller Wallet 3B Transaction History</a></li>
+						<li><a href="seller-wallet3b-transaction-withdraw-detail.html">Seller Wallet 3B Withdraw Detail</a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 
