3B - phase4 - update title seller/buyer order return

--- a/3B-NEW/seller-order-return.html
+++ b/3B-NEW/seller-order-return.html
@@ -319,7 +319,7 @@
 										<div class="total pull-right">Total Items: 5 Items</div>
 									</div>
 									<div class="col-md-4">
-										<div class="total pull-right">Total Price: <span class="text-red">$2345</span></div>
+										<div class="total pull-right">Refund: <span class="text-red">$2345</span></div>
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -387,7 +387,7 @@
 										<div class="total pull-right">Total Items: 5 Items</div>
 									</div>
 									<div class="col-md-4">
-										<div class="total pull-right">Total Price: <span class="text-red">$2345</span></div>
+										<div class="total pull-right">Refund: <span class="text-red">$2345</span></div>
 									</div>
 									<div class="clearfix"></div>
 								</div>
