--- a/3B-NEW/buyer-order-return.html
+++ b/3B-NEW/buyer-order-return.html
@@ -244,7 +244,7 @@
 										<div class="total pull-right">Total Items: 5 Items</div>
 									</div>
 									<div class="col-md-4">
-										<div class="total pull-right">Total Price: <span class="text-red">$2345</span></div>
+										<div class="total pull-right">Refund: <span class="text-red">$2345</span></div>
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -312,7 +312,7 @@
 										<div class="total pull-right">Total Items: 5 Items</div>
 									</div>
 									<div class="col-md-4">
-										<div class="total pull-right">Total Price: <span class="text-red">$2345</span></div>
+										<div class="total pull-right">Refund: <span class="text-red">$2345</span></div>
 									</div>
 									<div class="clearfix"></div>
 								</div>
