3B - phase 5 - add seller transaction-payment-detail

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -319,7 +319,9 @@
 					<ul>
 						<li><a href="seller-wallet3b.html">Wallet 3B</a></li>
 						<li><a href="seller-wallet3b-transaction-history.html">Seller Wallet 3B Transaction History</a></li>
-						<li><a href="seller-wallet3b-transaction-withdraw-detail.html">Seller Wallet 3B Withdraw Detail</a></li>
+						<li><a href="seller-wallet3b-transaction-withdraw-detail.html">Seller Wallet 3B Transaction Withdraw Detail</a></li>
+						<li><a href="seller-wallet3b-transaction-payment-detail.html">Seller Wallet 3B Transaction Payment Detail</a></li>
+						<li><a href="seller-wallet3b-withdraw.html">Seller Wallet 3B Withdraw</a></li>
 					</ul>
 				</div>
 			</div>
