--- a/3B-NEW/seller-wallet3b-transaction-payment-detail.html
+++ b/3B-NEW/seller-wallet3b-transaction-payment-detail.html
@@ -253,86 +253,28 @@
 			<section class="content">
 				<div class="content-block">
 					<div class="head">
-						<h3>Ví 3B - Transaction History</h3>
+						<h3>Ví 3B - Withdrawal Detail</h3>
 					</div>
 					<!-- BEGIN BODY -->
 					<div class="body wallet3b">
-						<div class="row">
-							<div class="col-md-6">
-								<!-- BEGIN HISTORY -->
-								<div class="history">
-									<div class="item payment">
-										<a href="seller-wallet3b-transaction-payment-detail.html">
-											<div class="icon pull-left">
-												<img class="opbject-fit" src="assets/images/svg/transaction-1.svg">
-											</div>
-											<div class="info pull-left">
-												<div class="title">Payment Ligon Fashion</div>
-												<div class="info-detail">
-													<span>Order ID: 190013123MIGK</span>
-													<span class="date">25-08-2019 08:03</span>
-												</div>
-											</div>
-											<div class="point pull-right">-$1000</div>
-											<div class="clearfix"></div>
-										</a>
-									</div>
-									<div class="item withdraw">
-										<a href="seller-wallet3b-transaction-withdraw-detail.html">
-											<div class="icon pull-left">
-												<img class="opbject-fit" src="assets/images/svg/withdraw.svg">
-											</div>
-											<div class="info pull-left">
-												<div class="title">Withdrawal</div>
-												<div class="info-detail">
-													<span>To Acc: (*1657)</span>
-													<span class="date">25-08-2019 08:03</span>
-												</div>
-											</div>
-											<div class="point pull-right">+$100</div>
-											<div class="clearfix"></div>
-										</a>										
-									</div>
-									<div class="item payment">
-										<a href="seller-wallet3b-transaction-payment-detail.html">
-											<div class="icon pull-left">
-												<img class="opbject-fit" src="assets/images/svg/transaction-1.svg">
-											</div>
-											<div class="info pull-left">
-												<div class="title">Payment Ligon Fashion</div>
-												<div class="info-detail">
-													<span>Order ID: 190013123MIGK</span>
-													<span class="date">25-08-2019 08:03</span>
-												</div>
-											</div>
-											<div class="point pull-right">-$100</div>
-											<div class="clearfix"></div>
-										</a>
-									</div>
-									<div class="item withdraw">
-										<a href="seller-wallet3b-transaction-withdraw-detail.html">
-											<div class="icon pull-left">
-												<img class="opbject-fit" src="assets/images/svg/withdraw.svg">
-											</div>
-											<div class="info pull-left">
-												<div class="title">Withdrawal</div>
-												<div class="info-detail">
-													<span>To Acc: (*1657)</span>
-													<span class="date">25-08-2019 08:03</span>
-												</div>
-											</div>
-											<div class="point pull-right">+$1000</div>
-											<div class="clearfix"></div>
-										</a>
-									</div>
+						<div class="row withdraw-detail">
+							<div class="col-md-4">
+								<div class="body-item">
+									<div class="balance text-red">$500.00</div>
+									<div class="title text-green">Wallet Balance</div>
 								</div>
-								<!-- /END HISTORY -->
+
+								<div class="body-item detail">
+									<label>Transaction ID <span class="pull-right">91165612</span></label>
+									<label>Description <span class="pull-right">Nạp tiền tự động</span></label>
+									<label>Time <span class="pull-right">26-09-2019 16:00</span></label>
+								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="foot">
-						
+						<a href="seller-wallet3b.html" class="btn btn-flat btn-danger">Back to My Wallet</a>
 					</div>
 				</div>
 			</section>
