3B - phase 5 - some update

--- a/3B-NEW/seller-wallet3b-withdraw.html
+++ b/3B-NEW/seller-wallet3b-withdraw.html
@@ -231,7 +231,6 @@
 						</ul>
 					</li>
 					<!-- /END MENU REPORT -->
-					
 
 				</ul>
 			</section>
@@ -251,41 +250,59 @@
 			<!-- /END CONTENT HEADER -->
 
 			<!-- CONTENT -->
-			<section class="content order-detail-block">
+			<section class="content">
 				<div class="content-block">
 					<div class="head">
-						<h3>Ví 3B</h3>
+						<h3>Ví 3B - Withdrawal Detail</h3>
 					</div>
 					<!-- BEGIN BODY -->
-					<div class="body wallet3b">
+					<div class="body">
 						<div class="row">
-							<div class="col-md-2">
-								<div class="body-item">
-									<div class="title">Wallet Balance</div>
-									<div class="balance">$500.00</div>
+							<div class="col-md-4">
+								<div class="row">
+									<div class="col-md-6">
+										<div class="body-item">
+											<img class="object-fit" src="assets/images/banks/vietcombank.png">
+											<div class="name">Vietcombank <span>**** 7958</span></div>
+										</div>
+									</div>
+									<div class="col-md-6">
+										<div class="body-item">
+											<img class="object-fit" src="assets/images/banks/bidv.png">
+											<div class="name">BIDV <span>**** 7958</span></div>
+										</div>
+									</div>
 								</div>
 							</div>
-							<div class="col-md-2">
-								<div class="body-item">
-									<a href="seller-wallet3b-transaction-history.html">
-										<img src="assets/images/svg/transaction.svg">
-										<div class="name">Transactions</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-2">
-								<div class="body-item">
-									<a href="seller-wallet3b-withdraw.html">
-										<img src="assets/images/svg/atm.svg">
-										<div class="name">Withdraw</div>
-									</a>
+							<div class="col-md-8">
+								<div class="timelines">
+									<div class="timeline active">
+										<div class="tl-content">
+											<h3 class="tl-title">Withdrawal Successful</h3>
+											<p>23-09-2019 10:30</p>
+										</div>
+									</div>
+
+									<div class="timeline">
+										<div class="tl-content">
+											<h3 class="tl-title">Withdrawal 3B accept</h3>
+											<p>23-09-2019 10:30</p>
+										</div>
+									</div>
+
+									<div class="timeline">
+										<div class="tl-content">
+											<h3 class="tl-title">Withdrawal Requested</h3>
+											<p>23-09-2019 10:30</p>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="foot">
-						
+						<a href="seller-wallet3b.html" class="btn btn-flat btn-danger">Back to My Wallet</a>
 					</div>
 				</div>
 			</section>
