3B - phase 5 - add seller wallet3b withdraw

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -322,6 +322,9 @@
 						<li><a href="seller-wallet3b-transaction-withdraw-detail.html">Seller Wallet 3B Transaction Withdraw Detail</a></li>
 						<li><a href="seller-wallet3b-transaction-payment-detail.html">Seller Wallet 3B Transaction Payment Detail</a></li>
 						<li><a href="seller-wallet3b-withdraw.html">Seller Wallet 3B Withdraw</a></li>
+						<li><a href="seller-wallet3b-withdraw-bank-linked.html">Seller Wallet 3B Withdraw Bank Linked</a></li>
+						<li><a href="seller-wallet3b-withdraw-confirm.html">Seller Wallet 3B Withdraw Confirm</a></li>
+						<li><a href="seller-wallet3b-withdraw-confirm-error.html">Seller Wallet 3B Withdraw Confirm Error</a></li>
 					</ul>
 				</div>
 			</div>
