--- a/3B-NEW/seller-wallet3b-withdraw-bank-linked.html
+++ b/3B-NEW/seller-wallet3b-withdraw-bank-linked.html
@@ -253,82 +253,97 @@
 			<section class="content">
 				<div class="content-block">
 					<div class="head">
-						<h3>Ví 3B - Withdrawal Detail</h3>
+						<h3>Ví 3B - Withdrawal Bank Linked</h3>
 					</div>
 					<!-- BEGIN BODY -->
 					<div class="body">
 						<div class="bank-account">
 							<div class="row">
 								<div class="col-md-6">
-									<h4>Ngân hàng <a href="seller-wallet3b-withdraw-bank-linked.html" class="pull-right">Xem tất cả</a></h4>
-									<div class="items">
-										<div class="item active">
+									<div class="items linked">
+										<div class="item">
 											<img class="object-fit" src="assets/images/banks/vietcombank.png">
 											<span class="name">Vietcombank</span>
 											<span class="numb">0938 *** 433</span>
+											<div class="chk pull-right">
+												<input type="checkbox" name="chk1" id="chk1" class="chk-custom">
+												<label for="chk1" class="chk-custom-label"></label>
+											</div>
+											<div class="clearfix"></div>
 										</div>
 										<div class="item">
 											<img class="object-fit" src="assets/images/banks/vietcombank.png">
 											<span class="name">Vietcombank</span>
 											<span class="numb">0938 *** 433</span>
+											<div class="chk pull-right">
+												<input type="checkbox" name="chk2" id="chk2" class="chk-custom">
+												<label for="chk2" class="chk-custom-label"></label>
+											</div>
+											<div class="clearfix"></div>
 										</div>
 										<div class="item">
 											<img class="object-fit" src="assets/images/banks/vietcombank.png">
 											<span class="name">Vietcombank</span>
 											<span class="numb">0938 *** 433</span>
+											<div class="chk pull-right">
+												<input type="checkbox" name="chk3" id="chk3" class="chk-custom">
+												<label for="chk3" class="chk-custom-label"></label>
+											</div>
+											<div class="clearfix"></div>
 										</div>
 										<div class="item">
 											<img class="object-fit" src="assets/images/banks/vietcombank.png">
 											<span class="name">Vietcombank</span>
 											<span class="numb">0938 *** 433</span>
+											<div class="chk pull-right">
+												<input type="checkbox" name="chk4" id="chk4" class="chk-custom">
+												<label for="chk4" class="chk-custom-label"></label>
+											</div>
+											<div class="clearfix"></div>
 										</div>
 										<div class="item">
 											<img class="object-fit" src="assets/images/banks/vietcombank.png">
 											<span class="name">Vietcombank</span>
 											<span class="numb">0938 *** 433</span>
+											<div class="chk pull-right">
+												<input type="checkbox" name="chk5" id="chk5" class="chk-custom">
+												<label for="chk5" class="chk-custom-label"></label>
+											</div>
+											<div class="clearfix"></div>
 										</div>
 										<div class="item">
 											<img class="object-fit" src="assets/images/banks/vietcombank.png">
 											<span class="name">Vietcombank</span>
 											<span class="numb">0938 *** 433</span>
+											<div class="chk pull-right">
+												<input type="checkbox" name="chk6" id="chk6" class="chk-custom">
+												<label for="chk6" class="chk-custom-label"></label>
+											</div>
+											<div class="clearfix"></div>
 										</div>
 										<div class="item">
 											<img class="object-fit" src="assets/images/banks/vietcombank.png">
 											<span class="name">Vietcombank</span>
 											<span class="numb">0938 *** 433</span>
+											<div class="chk pull-right">
+												<input type="checkbox" name="chk7" id="chk7" class="chk-custom">
+												<label for="chk7" class="chk-custom-label"></label>
+											</div>
+											<div class="clearfix"></div>
 										</div>
 									</div>
 
 									<a href="seller-banking-add.html" class="text-red"><i class="fa fa-plus margin-r-5"></i>Thêm ngân hàng</a>
 								</div>
 								<div class="col-md-6">
-									<p>Nhập số tiền cần rút (VND)</p>
-									<div class="input-group">
-										<input type="text" class="form-control" placeholder="100.000">
-									</div>
-									<div class="chk margin-b">
-										<input type="checkbox" name="chk7" id="chk7" class="chk-custom">
-										<label for="chk7" class="chk-custom-label">Số dư cho phép rút(1.345.555 đ)</label>
-									</div>
-									<ul class="list-btn">
-										<li class="active"><button class="btn btn-default">100.000</button></li>
-										<li><button class="btn btn-default">200.000</button></li>
-										<li><button class="btn btn-default">300.000</button></li>
-										<li><button class="btn btn-default">500.000</button></li>
-										<li><button class="btn btn-default">1.000.000</button></li>
-										<li><button class="btn btn-default">3.000.000</button></li>
-									</ul>
-									<div class="fee">
-										<p>Phí rút tiền <span class="pull-right">4,000đ</span></p>
-										<span>Lệnh rút tiền sẽ được thực hiện trong vòng từ 3-5 ngày làm việc(không tính t7, chủ nhật và ngày lễ)</span>
-									</div>									
+									
 								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="foot">
-						<a href="seller-wallet3b-withdraw-confirm.html" class="btn btn-flat btn-danger">Next</a>
+						<a href="seller-wallet3b-withdraw.html" class="btn btn-flat btn-danger">Next</a>
 					</div>
 				</div>
 			</section>
