3B - add Admin Manage Withdraw

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -315,6 +315,14 @@
 			</div>
 			<div class="col-md-6">
 				<div class="admin">
+					<h5>ADMIN</h5>
+					<ul>
+						<li><a href="admin-withdraw.html">Admin Manage Withdraw</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="admin">
 					<h5>WALLET 3B</h5>
 					<ul>
 						<li><a href="seller-wallet3b.html">Wallet 3B</a></li>
