3B - phase 5 - add wallet3b setting

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -333,6 +333,9 @@
 						<li><a href="seller-wallet3b-withdraw-bank-linked.html">Seller Wallet 3B Withdraw Bank Linked</a></li>
 						<li><a href="seller-wallet3b-withdraw-confirm.html">Seller Wallet 3B Withdraw Confirm</a></li>
 						<li><a href="seller-wallet3b-withdraw-confirm-error.html">Seller Wallet 3B Withdraw Confirm Error</a></li>
+						<li><a href="seller-wallet3b-setting.html">Seller Wallet 3B Setting</a></li>
+						<li><a href="seller-wallet3b-setting-sms-verify.html">Seller Wallet 3B Setting SMS Verify</a></li>
+						<li><a href="seller-wallet3b-setting-change-pin.html">Seller Wallet 3B Setting Change PIN</a></li>
 					</ul>
 				</div>
 			</div>
