--- a/3B-NEW/seller-wallet3b-setting.html
+++ b/3B-NEW/seller-wallet3b-setting.html
@@ -254,30 +254,24 @@
 			<section class="content order-detail-block">
 				<div class="content-block">
 					<div class="head">
-						<h3>Ví 3B</h3>
+						<h3>Ví 3B Setting</h3>
 					</div>
 					<!-- BEGIN BODY -->
 					<div class="body wallet3b">
 						<div class="row">
 							<div class="col-md-2">
 								<div class="body-item">
-									<div class="title">Wallet Balance</div>
-									<div class="balance">$500.00</div>
-								</div>
-							</div>
-							<div class="col-md-2">
-								<div class="body-item">
-									<a href="seller-wallet3b-transaction-history.html">
-										<img src="assets/images/svg/transaction.svg">
-										<div class="name">Transactions</div>
+									<a href="seller-banking-account.html">
+										<img src="assets/images/svg/bank.svg">
+										<div class="name">My Bank account</div>
 									</a>
 								</div>
 							</div>
 							<div class="col-md-2">
 								<div class="body-item">
-									<a href="seller-wallet3b-withdraw.html">
-										<img src="assets/images/svg/atm.svg">
-										<div class="name">Withdraw</div>
+									<a href="seller-wallet3b-setting-sms-verify.html">
+										<img src="assets/images/svg/mdi-lock.svg">
+										<div class="name">Create Wallet Pin</div>
 									</a>
 								</div>
 							</div>
@@ -285,7 +279,7 @@
 					</div>
 
 					<div class="foot">
-						<a href="seller-wallet3b-setting.html" class="btn btn-default"><i class="fa fa-gears"></i> Setting</a>
+						
 					</div>
 				</div>
 			</section>
