3B - phase 5 - add shopping cart select payment

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -66,6 +66,14 @@
 						<li><a href="buyer-rating-error.html">Buyer Rating Error</a></li>
 					</ul>
 				</div>
+
+				<div class="col-md-6">
+					<h5>CHECKOUT - Phase5</h5>
+					<ul>
+						<li><a href="shopping-cart-checkout-select-payment.html">Shopping Cart Checkout Select Payment</a></li>
+						<li><a href="shopping-cart-checkout-select-payment-error.html">Shopping Cart Checkout Select Payment Error</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
