--- a/3B-NEW/seller-order-detail.html
+++ b/3B-NEW/seller-order-detail.html
@@ -450,40 +450,18 @@
 
 				<div class="modal-tracking">
 					<div class="head">
-						<h4>Cancel Order</h4>
+						<h4>Thời gian hoàn tiền</h4>
 					</div>
 					<div class="body">
-						<p>Select reason</p>
-						<ul class="list-chk">
-							<li>
-								<div class="chk">
-									<input type="checkbox" name="chk1" id="chk1" class="chk-custom">
-									<label for="chk1" class="chk-custom-label">Thời gian giao hàng dự kiến muộn</label>
-								</div>
-							</li>
-							<li>
-								<div class="chk">
-									<input type="checkbox" name="chk2" id="chk2" class="chk-custom">
-									<label for="chk2" class="chk-custom-label">Thời gian giao hàng dự kiến muộn</label>
-								</div>
-							</li>
-							<li>
-								<div class="chk">
-									<input type="checkbox" name="chk3" id="chk3" class="chk-custom">
-									<label for="chk3" class="chk-custom-label">Thời gian giao hàng dự kiến muộn</label>
-								</div>
-							</li>
-							<li>
-								<div class="chk">
-									<input type="checkbox" name="chk4" id="chk4" class="chk-custom">
-									<label for="chk4" class="chk-custom-label">Thời gian giao hàng dự kiến muộn</label>
-								</div>
-							</li>
-						</ul>
+						<p>1-3 ngày làm việc với ví Momo</p>
+						<p>3-5 ngày làm việc với thẻ ATM nội địa</p>
+						<p>Thời gian hoàn tiền có thể dao động trong khoảng 1-3 tuần làm việc - tùy theo chính sách của từng ngân hàng. Ngày làm việc không gồm thứ 7, CN và ngày lễ</p>
 					</div>
 
 					<div class="foot">
-						<a href="#" class="btn btn-danger pull-right">Send request</a>
+						<p>Bạn có đồng ý ủy đơn hàng không?</p>
+						<a href="#" class="btn btn-default pull-left">Đồng Ý</a>
+						<a href="#" class="btn btn-danger pull-right">Không</a>
 						<div class="clearfix"></div>
 					</div>
 				</div>
