3B - phase 5 - small updates

--- a/3B-NEW/seller-banking-account-detail.html
+++ b/3B-NEW/seller-banking-account-detail.html
@@ -260,29 +260,22 @@
 						<h3>The bank has linked</h3>
 					</div>
 					<!-- BEGIN BODY -->
-					<div class="body">
-						<div class="row">
-							<div class="col-md-3">
-								<a href="seller-banking-account-detail.html">
-									<div class="body-item">
-										<img class="object-fit" src="assets/images/banks/vietcombank.png">
-										<div class="name">Vietcombank <span>**** 7958</span> <span class="text-green pull-right">Mặc đinh</span></div>
-									</div>
-								</a>
-							</div>
-							<div class="col-md-3">
-								<a href="seller-banking-account-detail.html">
-									<div class="body-item">
-										<img class="object-fit" src="assets/images/banks/bidv.png">
-										<div class="name">BIDV <span>**** 7958</span></div>
-									</div>
-								</a>
+					<div class="body wallet3b">
+						<div class="row withdraw-detail">
+							<div class="col-md-4">
+								<div class="body-item detail">
+									<label>Name Account <span class="pull-right">PHU THI HUONG</span></label>
+									<label>STK <span class="pull-right">00458978999</span></label>
+									<label>Khu vực <span class="pull-right">Hà nội</span></label>
+									<label>Tên chi nhánh ngân hàng <span class="pull-right">Duy tan</span></label>
+								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="foot">
-						<a href="#" class="text-red" data-toggle="modal" data-target="#confirmPIN"><i class="fa fa-plus margin-r-5"></i>Thêm ngân hàng</a>
+						<a href="#" class="btn btn-default">Delete</a>
+						<a href="#" class="btn btn-danger">Thiết lập mặc định</a>
 					</div>
 				</div>
 			</section>
