--- a/3B-NEW/seller-banking-add-form.html
+++ b/3B-NEW/seller-banking-add-form.html
@@ -299,6 +299,13 @@
 									</div>
 								</div>
 
+								<div class="form-group">
+									<div class="chk margin-b">
+										<input type="checkbox" name="chk7" id="chk7" class="chk-custom">
+										<label for="chk7" class="chk-custom-label">Đặt làm mặc định</label>
+									</div>
+								</div>
+
 								<button type="button" class="btn btn-flat btn-danger" data-toggle="modal" data-target="#addSuccess">Lưu</button>
 							</div>
 						</div>
