--- a/3B-NEW/seller-wallet3b-transaction-history.html
+++ b/3B-NEW/seller-wallet3b-transaction-history.html
@@ -261,67 +261,83 @@
 							<div class="col-md-6">
 								<!-- BEGIN HISTORY -->
 								<div class="history">
-									<div class="item payment">
+									<div class="item withdraw">
 										<a href="seller-wallet3b-transaction-payment-detail.html">
 											<div class="icon pull-left">
-												<img class="opbject-fit" src="assets/images/svg/transaction-1.svg">
+												<img class="object-fit" src="assets/images/img3.jpg">
 											</div>
 											<div class="info pull-left">
-												<div class="title">Payment Ligon Fashion</div>
+												<div class="title">Thanh toán bởi Linhnguyen1234 </div>
 												<div class="info-detail">
 													<span>Order ID: 190013123MIGK</span>
 													<span class="date">25-08-2019 08:03</span>
 												</div>
 											</div>
-											<div class="point pull-right">-$1000</div>
+											<div class="point pull-right">+$15.00</div>
+											<div class="clearfix"></div>
+										</a>
+									</div>
+									<div class="item payment">
+										<a href="seller-wallet3b-transaction-payment-detail.html">
+											<div class="icon pull-left">
+												<img class="object-fit" src="assets/images/svg/transaction-1.svg">
+											</div>
+											<div class="info pull-left">
+												<div class="title">Giao dịch rút tiền</div>
+												<div class="info-detail">
+													<span>To Acc: (*4687)</span>
+													<span class="date">25-08-2019 08:03</span>
+												</div>
+											</div>
+											<div class="point pull-right">-$15.00</div>
 											<div class="clearfix"></div>
 										</a>
 									</div>
 									<div class="item withdraw">
 										<a href="seller-wallet3b-transaction-withdraw-detail.html">
 											<div class="icon pull-left">
-												<img class="opbject-fit" src="assets/images/svg/withdraw.svg">
+												<img class="object-fit" src="assets/images/svg/withdraw.svg">
 											</div>
 											<div class="info pull-left">
-												<div class="title">Withdrawal</div>
+												<div class="title">Hoàn tiền do hủy giao dịch rút tiền</div>
 												<div class="info-detail">
 													<span>To Acc: (*1657)</span>
 													<span class="date">25-08-2019 08:03</span>
 												</div>
 											</div>
-											<div class="point pull-right">+$100</div>
+											<div class="point pull-right">+$15.00</div>
 											<div class="clearfix"></div>
 										</a>										
 									</div>
 									<div class="item payment">
 										<a href="seller-wallet3b-transaction-payment-detail.html">
 											<div class="icon pull-left">
-												<img class="opbject-fit" src="assets/images/svg/transaction-1.svg">
+												<img class="object-fit" src="assets/images/img3.jpg">
 											</div>
 											<div class="info pull-left">
-												<div class="title">Payment Ligon Fashion</div>
+												<div class="title">Thanh toán cho Ligon fashion</div>
 												<div class="info-detail">
 													<span>Order ID: 190013123MIGK</span>
 													<span class="date">25-08-2019 08:03</span>
 												</div>
 											</div>
-											<div class="point pull-right">-$100</div>
+											<div class="point pull-right">-$15.00</div>
 											<div class="clearfix"></div>
 										</a>
 									</div>
 									<div class="item withdraw">
 										<a href="seller-wallet3b-transaction-withdraw-detail.html">
 											<div class="icon pull-left">
-												<img class="opbject-fit" src="assets/images/svg/withdraw.svg">
+												<img class="object-fit" src="assets/images/svg/withdraw.svg">
 											</div>
 											<div class="info pull-left">
-												<div class="title">Withdrawal</div>
+												<div class="title">Hoàn tiền vào ví</div>
 												<div class="info-detail">
-													<span>To Acc: (*1657)</span>
+													<span>Order ID: 190013123MIGK</span>
 													<span class="date">25-08-2019 08:03</span>
 												</div>
 											</div>
-											<div class="point pull-right">+$1000</div>
+											<div class="point pull-right">+$15.00</div>
 											<div class="clearfix"></div>
 										</a>
 									</div>
