3B - phase 5 - update Admin manage withdraw

--- a/3B-NEW/admin-withdraw.html
+++ b/3B-NEW/admin-withdraw.html
@@ -413,6 +413,7 @@
 										<a href="#" class="btn btn-default active">Tất cả</a>
 										<a href="#" class="btn btn-default">Chờ duyệt</a>
 										<a href="#" class="btn btn-default">Đã duyệt</a>
+										<a href="#" class="btn btn-default">Từ chối</a>
 										<a href="#" class="btn btn-default">Đã chuyển khoản</a>
 									</div>
 								</div>
@@ -430,6 +431,8 @@
 											<th>Ngân hàng nhận số tiền</th>
 											<th>Số dư trong ví (Số tiền tối đa được rút)</th>
 											<th>Ngày giờ yêu cầu</th>
+											<th>Ngày giờ duyệt</th>
+											<th>Ngày giờ hủy</th>
 											<th>Ngày giờ chuyển khoản thành công</th>
 											<th>Trạng thái</th>
 											<th class="action">Hoạt động</th>
@@ -445,10 +448,13 @@
 											<td>8,400,000</td>
 											<td>2020-01-09 17:26:33</td>
 											<td></td>
+											<td></td>
+											<td></td>
 											<td>Chưa duyệt</td>
 											<td>
 												<center>
-													<a href="admin-discount-approval.html"><img class="view-approval-icon" src="assets/images/svg/checklist.svg"></a>
+													<button class="btn btn-default btn-xs margin-r-5">Duyệt</buttom>
+													<button class="btn btn-danger btn-xs">Từ chối</buttom>
 												</center>
 											</td>
 										</tr>
@@ -461,6 +467,22 @@
 											<td>8,400,000</td>
 											<td>2020-01-09 17:26:33</td>
 											<td>2020-01-10 17:26:33</td>
+											<td>2020-01-10 17:26:33</td>
+											<td></td>
+											<td>Đã hủy</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>01386398599</td>
+											<td>Shop...</td>
+											<td>3,000,000</td>
+											<td>11,000</td>
+											<td>Vietcombank<br>Nguyễn Văn A<br>12365498711<br>Chi nhánh Cầu Gỗ</td>
+											<td>8,400,000</td>
+											<td>2020-01-09 17:26:33</td>
+											<td>2020-01-10 17:26:33</td>
+											<td></td>
+											<td></td>
 											<td>Đã duyệt</td>
 											<td></td>
 										</tr>
@@ -473,6 +495,8 @@
 											<td>8,400,000</td>
 											<td>2020-01-09 17:26:33</td>
 											<td>2020-01-10 17:26:33</td>
+											<td></td>
+											<td></td>
 											<td>Đã chuyển khoản</td>
 											<td></td>
 										</tr>
