3B - phase 5 - add card services mobile

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -72,6 +72,7 @@
 					<ul>
 						<li><a href="shopping-cart-checkout-select-payment.html">Shopping Cart Checkout Select Payment</a></li>
 						<li><a href="shopping-cart-checkout-select-payment-error.html">Shopping Cart Checkout Select Payment Error</a></li>
+						<li><a href="card-services.html">Card & Services</a></li>
 					</ul>
 				</div>
 			</div>
