3B - phase 5 - add card services electric

--- a/3B-WEB/card-services-electric-bill.html
+++ b/3B-WEB/card-services-electric-bill.html
@@ -276,32 +276,40 @@
 			<div class="col-md-10 content-centered">
 				<!-- BEGIN CARD SERVICES -->
 				<div class="card-services">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-mobile-code.html">
-									<img src="assets/images/svg/hand-graving.svg">
-									<span>Nạp thẻ điện thoại</span>
-								</a>
+
+					<div class="body">
+						<h4>Thanh toán tiền điện</h4>
+
+						<div class="row">
+							<div class="col-md-4">
+								<ul class="list-card">
+									<li>
+										<div class="ava">
+											<img class="object-fit" src="assets/images/evn.png">
+										</div>
+										<span class="name">EVN Hà Nội</span>
+									</li>
+								</ul>
 							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="item">
-								<a href="card-services-electric.html">
-									<img src="assets/images/svg/plug.svg">
-									<span>Thanh toán tiền điện</span>
-								</a>
+							<div class="col-md-8">
+								<div class="payment-detail">
+									<p>Mã khách hàng <span class="pull-right"><b>XXXXXX</b></span></p>
+									<p>Tên khách hàng <span class="pull-right"><b>VU THU TRANG</b></span></p>
+									<p>Địa chỉ khách hàng: <span class="pull-right"><b>SN 24, ngách 23 Phố Xã Đàn, Q Hai Bà Trưng, Hà Nội</b></span></p>
+								</div>
+								<div class="payment-detail">
+									<p>Kỳ hoá đơn <span class="pull-right"><b>01-2019</b></span></p>
+									<p>Mã hoá đơn <span class="pull-right"><b>XXXXXXX</b></span></p>
+								</div>
+								<div class="payment-detail">
+									<p>Tổng hoá đơn <span class="pull-right txt-red"><b>200.000 đ</b></span></p>
+								</div>
+								<a href="card-services-electric-bill-detail.html" class="btn btn-danger">Check out</a>
 							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="item">
-								<a href="#">
-									<img src="assets/images/svg/card.svg">
-									<span>Nạp thẻ Game</span>
-								</a>
-							</div>
+							<div class="clearfix"></div>
 						</div>
 					</div>
+
 				</div>
 				<!-- END CARD SERVICES -->
 			</div>
